--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
 
     <title>Paul Aceves | Portfolio</title>
     <meta name="Paul Aceves" content="Alphainvicta, Paul, javascript, react, front end" />
-    <meta name="Fullstack developer" content="Paul | Fulldev" />
+    <meta name="Senior front-end developer" content="Paul | front-end" />
 
     <!-- Required librarys -->
     <link
@@ -28,9 +28,9 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hello there, my name is <span class="text-color-main">Paul Aceves</span>
+          It's my pleasure to meet you, I'm <span class="text-color-main">Paul the dev</span> 
           <br />
-          And I always up to new challenges.
+          Welcome to my portfolio!
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Let's Get started</a>
@@ -60,14 +60,14 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                "Dark theme fan, one of my main goals is become a game developer." 👾<br/> <br/>
-                I love to learn new computer technologies and create great and modern looking projects.
+                "Modern ideas required modern solutions"<br/> <br/>
+                I love to learn new computer technologies and create fast, reliable looking projects.
                 I have solid knowledge as a fullstack developer but I like way more working at the front end enviroment for all the 
-                fun of coding with react and designing UI for the joy that final users will experience! <br/> <br/>
-                Have a look of my resume for knowing all my main skills.
+                fun of coding with react and designing UI for the joy the final user will experience! <br/> <br/>
+                Have a look of my resume for meet all my main skills.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="./resume/Resume.pdf">
                   My resume
                 </a>
               </span>
@@ -90,14 +90,10 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">Face recognition app</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    ?
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
@@ -124,14 +120,10 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">React e-commerce</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    ??
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
@@ -158,14 +150,10 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">React native food delivery app</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    ???
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
@@ -187,6 +175,36 @@
             </div>
           </div>
           <!-- /END Project -->
+
+                    <!-- Each .row is a project -->
+                    <div class="row">
+                      <div class="col-lg-4 col-sm-12">
+                        <div class="project-wrapper__text">
+                          <h3 class="project-wrapper__text-title">Skyder website</h3>
+                          <div>
+                            <p class="mb-4">
+                              My most resent work using the best practices for making this product up for the needs of the customer and also making it future proof when the need add more services, brands, employees
+                            </p>
+                          </div>
+                          <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                            See Live
+                          </a>
+                          <a target="_blank" class="cta-btn text-color-main" href="#!">
+                            Source Code
+                          </a>
+                        </div>
+                      </div>
+                      <div class="col-lg-8 col-sm-12">
+                        <div class="project-wrapper__image">
+                          <a href="#!" target="_blank">
+                            <div data-tilt class="thumbnail rounded">
+                              <img class="img-fluid" src="./assets/project.jpg" />
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- /END Project -->
         </div>
       </div>
     </section>
@@ -220,16 +238,16 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
+          <a href="https://angel.co/u/paul-aceves" target="_blank">
+            <i class="fa fa-angellist fa-inverse"></i>
           </a>
           <a href="#!" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://www.linkedin.com/in/paul-aceves-1a2a401a9/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/Alphainvicta" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
