the portfolio has been updated

--- a/src/template.html
+++ b/src/template.html
@@ -28,7 +28,7 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          It's my pleasure to meet you, I'm <span class="text-color-main">Paul the dev</span> 
+          Nice to meet you, I'm  <span class="text-color-main">Paul the dev</span> 
           <br />
           Welcome to my portfolio!
         </h1>
