--- a/src/template.html
+++ b/src/template.html
@@ -28,7 +28,7 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Nice to meet you, I'm <span class="text-color-main">Paul Aceves</span> 
+          🖥 Nice to meet you, I'm<span class="text-color-main">Paul Aceves</span> 🖥 
           <br />
           Welcome to my portfolio!
         </h1>
@@ -60,7 +60,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                "Modern ideas required modern solutions"<br/> <br/>
+                "Modern ideas required modern solutions" 💡<br/> <br/>
                 I love to learn new computer technologies and create fast, reliable looking projects.
                 I have solid knowledge as a fullstack developer but I like way more working at the front end enviroment for all the 
                 fun of coding with react and designing UI for the joy the final user will experience! <br/> <br/>
