--- a/src/template.html
+++ b/src/template.html
@@ -28,8 +28,8 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          🖥 Nice to meet you, I'm<span class="text-color-main">Paul Aceves </span>🖥 
-          <br />
+          Nice to meet you, I'm <span class="text-color-main">Paul Aceves </span>🖥 
+          <br/>
           Welcome to my portfolio!
         </h1>
         <p class="hero-cta" class="load-hidden">
