--- a/src/template.html
+++ b/src/template.html
@@ -67,7 +67,7 @@
                 Have a look of my resume for meet all my main skills.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="./resume/Resume.pdf">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="Resume.pdf">
                   My resume
                 </a>
               </span>
