the portfolio has been updated

--- a/src/template.html
+++ b/src/template.html
@@ -67,7 +67,7 @@
                 Have a look of my resume for meet all my main skills.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="Resume.pdf">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1cRi4QGWHB4OUql1P45Zy0mVLlUoKSDDR/view?usp=sharing">
                   My resume
                 </a>
               </span>
