--- a/src/template.html
+++ b/src/template.html
@@ -93,13 +93,14 @@
                 <h3 class="project-wrapper__text-title">Face recognition app</h3>
                 <div>
                   <p class="mb-4">
-                    ?
+                    A funny little project with a face recognition api. <br/>
+                    This fullstack project use, react, node, postgre sql, heroku and amazon aws, with the front end, back end and server deploy on different places this project its an example of the power of node itself conecting everything quick and easy.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://brainiapp.herokuapp.com/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/smart-brain">
                   Source Code
                 </a>
               </div>
@@ -108,7 +109,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/smartbrain.png" />
                   </div>
                 </a>
               </div>
