added information of the projects

--- a/src/template.html
+++ b/src/template.html
@@ -121,16 +121,17 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">React e-commerce</h3>
+                <h3 class="project-wrapper__text-title">React e-shop</h3>
                 <div>
                   <p class="mb-4">
-                    ??
+                    A react based e-shop full scalable project. <br/>
+                    With the power of react 17, stripe, firebase and node. This project showcase clean scalable code usign libraries like hooks, redux and saga for maintain the render time sharp and the experience as good as possible.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="commingsoon!">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="commingsoon!">
                   Source Code
                 </a>
               </div>
@@ -154,13 +155,14 @@
                 <h3 class="project-wrapper__text-title">React native food delivery app</h3>
                 <div>
                   <p class="mb-4">
-                    ???
+                    A modern look native app for android and apple! <br/>
+                    Using modern solutions like Native, stripes, firebase, google maps and expo. This app showcase a fresh modern food delivery app with the most popular features used today.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="commingsoon!">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="commingsoon!">
                   Source Code
                 </a>
               </div>
@@ -184,13 +186,14 @@
                           <h3 class="project-wrapper__text-title">Skyder website</h3>
                           <div>
                             <p class="mb-4">
-                              My most resent work using the best practices for making this product up for the needs of the customer and also making it future proof when the need add more services, brands, employees
+                              Not everything is big <br/>
+                              As a freelance developer right now, most of the time people will reach me asking most of the time for a website, this example is a business website where they showcase their own services and the company. 
                             </p>
                           </div>
-                          <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                          <a target="_blank" class="cta-btn cta-btn--hero" href="commingsoon!">
                             See Live
                           </a>
-                          <a target="_blank" class="cta-btn text-color-main" href="#!">
+                          <a target="_blank" class="cta-btn text-color-main" href="commingsoon!">
                             Source Code
                           </a>
                         </div>
