--- a/src/template.html
+++ b/src/template.html
@@ -171,7 +171,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/foodapp.jpg" />
+                    <img class="img-fluid" src="./assets/foodapp.jpg" style="height: 1080; width: auto;"/>
                   </div>
                 </a>
               </div>
