added native app photo

--- a/src/template.html
+++ b/src/template.html
@@ -107,7 +107,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://brainiapp.herokuapp.com/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/smartbrain.png" />
                   </div>
@@ -171,7 +171,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/foodapp.jpg" style="height: 1080; width: auto;"/>
+                    <img class="img-fluid" src="./assets/foodapp.jpg" style="height:876px !important; width:auto !important;"/>
                   </div>
                 </a>
               </div>
