update skyder info

--- a/src/template.html
+++ b/src/template.html
@@ -187,7 +187,7 @@
                           <div>
                             <p class="mb-4">
                               Not everything is big <br/>
-                              As a freelance developer right now, most of the time people will reach me asking most of the time for a website, this example is a business website where they showcase their own services and the company. 
+                              As a freelance developer right now, most of the time people will reach me asking for a website project, this example is a business website where they showcase their own services and the company. 
                             </p>
                           </div>
                           <a target="_blank" class="cta-btn cta-btn--hero" href="commingsoon!">
