update skyder info

--- a/src/template.html
+++ b/src/template.html
@@ -186,7 +186,7 @@
                           <h3 class="project-wrapper__text-title">Skyder website</h3>
                           <div>
                             <p class="mb-4">
-                              Not everything is big <br/>
+                              Freelance common project examples <br/>
                               As a freelance developer right now, most of the time people will reach me asking for a website project, this example is a business website where they showcase their own services and the company. 
                             </p>
                           </div>
