--- a/src/template.html
+++ b/src/template.html
@@ -245,8 +245,8 @@
           <a href="https://angel.co/u/paul-aceves" target="_blank">
             <i class="fa fa-angellist fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
+          <a href="https://wa.me/523319128876" target="_blank">
+            <i class="fa fa-whatsapp fa-inverse"></i>
           </a>
           <a href="https://www.linkedin.com/in/paul-aceves-1a2a401a9/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
