added liks to react shop

--- a/src/template.html
+++ b/src/template.html
@@ -128,10 +128,10 @@
                     With the power of react 17, stripe, firebase and node. This project showcase clean scalable code usign libraries like hooks, redux and saga for maintain the render time sharp and the experience as good as possible.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="commingsoon!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://reacte-shop.herokuapp.com/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="commingsoon!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/reacte-shop">
                   Source Code
                 </a>
               </div>
