--- a/src/template.html
+++ b/src/template.html
@@ -162,7 +162,7 @@
                 <a target="_blank" class="cta-btn cta-btn--hero" href="commingsoon!">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="commingsoon!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/native-foodapp">
                   Source Code
                 </a>
               </div>
