--- a/src/template.html
+++ b/src/template.html
@@ -156,7 +156,7 @@
                 <div>
                   <p class="mb-4">
                     A modern look native app for android and apple! <br/>
-                    Using modern solutions like Native, stripes, firebase, google maps and expo. This app showcase a fresh modern food delivery app with the most popular features used today.
+                    Using modern solutions like Native, firebase, google maps and expo. This app showcase a fresh modern food delivery app with the most popular features used today.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://expo.io/@alphainvicta/projects/Native_food-app">
