--- a/src/template.html
+++ b/src/template.html
@@ -67,7 +67,7 @@
                 Have a look of my resume for meet all my main skills.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1cRi4QGWHB4OUql1P45Zy0mVLlUoKSDDR/view?usp=sharing">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://s3.amazonaws.com/attachments.angel.co/5819226-3133042ffd5fff414d30f00578a81afd.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJS6W3HGZGRJIRBTA%2F20210503%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210503T062032Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&X-Amz-Signature=02c62b7926412031399420a18e465ae0644e5db72f4d4d664a833cf053524f08">
                   My resume
                 </a>
               </span>
