--- a/src/template.html
+++ b/src/template.html
@@ -64,10 +64,10 @@
                 Love to learn new computer technologies and create fast, reliable looking projects.
                 Solid knowledge as a fullstack developer but I like way more working at the front end enviroment for all the 
                 fun of coding with react and designing UI for the joy the final user will experience! <br/> <br/>
-                Have a look of my resume for meet all my main skills.
+                Have a look at my resume to meet my main skills.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://s3.amazonaws.com/attachments.angel.co/5819226-3133042ffd5fff414d30f00578a81afd.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJS6W3HGZGRJIRBTA%2F20210503%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210503T062032Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&X-Amz-Signature=02c62b7926412031399420a18e465ae0644e5db72f4d4d664a833cf053524f08">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1cRi4QGWHB4OUql1P45Zy0mVLlUoKSDDR/view?usp=sharing">
                   My resume
                 </a>
               </span>
@@ -94,7 +94,7 @@
                 <div>
                   <p class="mb-4">
                     A funny little project with a face recognition api. <br/>
-                    This fullstack project use, react, node, postgre sql, heroku and amazon aws, with the front end, back end and server deploy on different places this project its an example of the power of node itself conecting everything quick and easy.
+                    This fullstack project use, React, Node, Postgresql, Heroku and Amazon AWS, with the front end, back end and server deploy on different places this project its an example of the power of node itself conecting everything quick and easy.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://brainiapp.herokuapp.com/">
@@ -124,8 +124,8 @@
                 <h3 class="project-wrapper__text-title">React e-shop</h3>
                 <div>
                   <p class="mb-4">
-                    A react based e-shop full scalable project. <br/>
-                    With the power of react 17, stripe, firebase and node. This project showcase clean scalable code usign libraries like hooks, redux and saga for maintain the render time sharp and the experience as good as possible.
+                    A React based e-shop full scalable project. <br/>
+                    With the power of React 17, Stripe, Firebase and Node. This project showcase clean scalable code usign libraries like Hooks, Redux and Saga for maintain the render time sharp and the experience as good as possible.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://reacte-shop.herokuapp.com/">
@@ -155,8 +155,8 @@
                 <h3 class="project-wrapper__text-title">React native food delivery app</h3>
                 <div>
                   <p class="mb-4">
-                    A modern look native app for android and apple! <br/>
-                    Using modern solutions like Native, firebase, google maps and expo. This app showcase a fresh modern food delivery app with the most popular features used today.
+                    A modern look native app for Android and Apple! <br/>
+                    Using modern solutions like Native, Firebase, Google maps and Expo. This app showcase a fresh modern food delivery app with the most popular features used today.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://expo.io/@alphainvicta/projects/Native_food-app">
@@ -258,7 +258,7 @@
 
         <hr />
         <p class="footer__text">
-          © 2020 - Original template developed by my fella <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
+          © 2021 - Original template developed by my fella <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
           </a>
         </p>
       </div>
