added image waiting to launch the website

--- a/src/template.html
+++ b/src/template.html
@@ -179,36 +179,67 @@
           </div>
           <!-- /END Project -->
 
-                    <!-- Each .row is a project -->
-                    <div class="row">
-                      <div class="col-lg-4 col-sm-12">
-                        <div class="project-wrapper__text">
-                          <h3 class="project-wrapper__text-title">Skyder website</h3>
-                          <div>
-                            <p class="mb-4">
-                              Freelance common project examples <br/>
-                              As a freelance developer right now, most of the time people will reach me asking for a website project, this example is a business website where they showcase their own services and the company. 
-                            </p>
-                          </div>
-                          <a target="_blank" class="cta-btn cta-btn--hero" href="commingsoon!">
-                            See Live
-                          </a>
-                          <a target="_blank" class="cta-btn text-color-main" href="commingsoon!">
-                            Source Code
-                          </a>
-                        </div>
-                      </div>
-                      <div class="col-lg-8 col-sm-12">
-                        <div class="project-wrapper__image">
-                          <a href="#!" target="_blank">
-                            <div data-tilt class="thumbnail rounded">
-                              <img class="img-fluid" src="./assets/project.jpg" />
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- /END Project -->
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Skyder website</h3>
+                <div>
+                  <p class="mb-4">
+                    Video drone house <br/>
+                    a fresh simple website where the company showcase their services and have a quote for a quick setup of what the customer expects from the service
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="commingsoon!">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/skyder">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/Skyder.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Computer services</h3>
+                <div>
+                  <p class="mb-4">
+                    PC maintance services <br/>
+                    A fresh landing page to promote the services for Pc and Mac computers
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="commingsoon!">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="commingsoon!">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/project.jpg" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
         </div>
       </div>
     </section>
