--- a/src/template.html
+++ b/src/template.html
@@ -190,7 +190,7 @@
                     a fresh simple website where the company showcase their services and have a quote for a quick setup of what the customer expects from the service
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="commingsoon!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="skyder.mx">
                   See Live
                 </a>
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/skyder">
@@ -200,7 +200,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="skyder.mx" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/Skyder.png" />
                   </div>
