--- a/src/template.html
+++ b/src/template.html
@@ -90,99 +90,6 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Face recognition app</h3>
-                <div>
-                  <p class="mb-4">
-                    A funny little project with a face recognition api. <br/>
-                    This fullstack project use, React, Node, Postgresql, Heroku and Amazon AWS, with the front end, back end and server deploy on different places this project its an example of the power of node itself conecting everything quick and easy.
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://brainiapp.herokuapp.com/">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/brainapp">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="https://brainiapp.herokuapp.com/" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/smartbrain.png" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">React e-shop</h3>
-                <div>
-                  <p class="mb-4">
-                    A React based e-shop full scalable project. <br/>
-                    With the power of React 17, Stripe, Firebase and Node. This project showcase clean scalable code usign libraries like Hooks, Redux and Saga for maintain the render time sharp and the experience as good as possible.
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://reacte-shop.herokuapp.com/">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/reacte-shop">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="https://reacte-shop.herokuapp.com/" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/reacte-shop.png" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">React native food delivery app</h3>
-                <div>
-                  <p class="mb-4">
-                    A modern look native app for Android and Apple! <br/>
-                    Using modern solutions like Native, Firebase, Google maps and Expo. This app showcase a fresh modern food delivery app with the most popular features used today.
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://expo.io/@alphainvicta/projects/Native_food-app">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/native-foodapp">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="https://expo.io/@alphainvicta/projects/Native_food-app" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/foodapp.jpg" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">Skyder website</h3>
                 <div>
                   <p class="mb-4">
@@ -190,7 +97,7 @@
                     a fresh simple website where the company showcase their services and have a quote for a quick setup of what the customer expects from the service
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://skyder.mx/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://skyder-web.netlify.app/">
                   See Live
                 </a>
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/skyder">
@@ -200,7 +107,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://skyder.mx/" target="_blank">
+                <a href="https://skyder-web.netlify.app/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/Skyder.png" />
                   </div>
@@ -214,26 +121,26 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Computer services</h3>
+                <h3 class="project-wrapper__text-title">Axolotl labs</h3>
                 <div>
                   <p class="mb-4">
-                    PC maintance services <br/>
-                    A fresh landing page to promote the services for Pc and Mac computers
+                    Software solutions <br/>
+                    My main website to promote our services
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="commingsoon!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://axolotlabs.netlify.app/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="commingsoon!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/axolote-labs">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://axolotlabs.netlify.app/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/Axolote.png" />
                   </div>
                 </a>
               </div>
@@ -244,6 +151,37 @@
       </div>
     </section>
     <!-- /END Projects Section -->
+
+    <!-- Each .row is a project -->
+    <div class="row">
+      <div class="col-lg-4 col-sm-12">
+        <div class="project-wrapper__text">
+          <h3 class="project-wrapper__text-title">Fish Flex</h3>
+          <div>
+            <p class="mb-4">
+              Top down 2D game <br/>
+              My first videogame ever!
+            </p>
+          </div>
+          <a target="_blank" class="cta-btn cta-btn--hero" href="https://floware.itch.io/fish-flex">
+            See Live
+          </a>
+          <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/fish_flex">
+            Source Code
+          </a>
+        </div>
+      </div>
+      <div class="col-lg-8 col-sm-12">
+        <div class="project-wrapper__image">
+          <a href="https://floware.itch.io/fish-flex" target="_blank">
+            <div data-tilt class="thumbnail rounded">
+              <img class="img-fluid" src="./assets/FishFlex.png" />
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- /END Project -->
 
     <!-- **** Contact Section **** -->
     <section id="contact">
