enhance buttons feedback

--- a/src/template.html
+++ b/src/template.html
@@ -61,9 +61,7 @@
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
                 "Modern ideas required modern solutions" 💡<br/> <br/>
-                Love to learn new computer technologies and create fast, reliable looking projects.
-                Solid knowledge as a fullstack developer but I like way more working at the front end enviroment for all the 
-                fun of coding with react and designing UI for the joy the final user will experience! <br/> <br/>
+                 Senior front end developer using technologies for web and videogames like React and Unity <br/> <br/>
                 Have a look at my resume to meet my main skills.
               </p>
               <span class="d-flex mt-3">
@@ -147,41 +145,37 @@
             </div>
           </div>
           <!-- /END Project -->
-        </div>
-      </div>
-    </section>
-    <!-- /END Projects Section -->
 
-    <!-- Each .row is a project -->
-    <div class="row">
-      <div class="col-lg-4 col-sm-12">
-        <div class="project-wrapper__text">
-          <h3 class="project-wrapper__text-title">Fish Flex</h3>
-          <div>
-            <p class="mb-4">
-              Top down 2D game <br/>
-              My first videogame ever!
-            </p>
-          </div>
-          <a target="_blank" class="cta-btn cta-btn--hero" href="https://floware.itch.io/fish-flex">
-            See Live
-          </a>
-          <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/fish_flex">
-            Source Code
-          </a>
-        </div>
-      </div>
-      <div class="col-lg-8 col-sm-12">
-        <div class="project-wrapper__image">
-          <a href="https://floware.itch.io/fish-flex" target="_blank">
-            <div data-tilt class="thumbnail rounded">
-              <img class="img-fluid" src="./assets/FishFlex.png" />
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Fish Flex</h3>
+                <div>
+                  <p class="mb-4">
+                    Top down 2D game <br/>
+                    My first videogame ever!
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://floware.itch.io/fish-flex">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/fish_flex">
+                  Source Code
+                </a>
+              </div>
             </div>
-          </a>
-        </div>
-      </div>
-    </div>
-    <!-- /END Project -->
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://floware.itch.io/fish-flex" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/FishFlex.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
 
     <!-- **** Contact Section **** -->
     <section id="contact">
