--- a/src/template.html
+++ b/src/template.html
@@ -176,7 +176,9 @@
             </div>
           </div>
           <!-- /END Project -->
-
+        </div>
+      </div> 
+    </section> 
     <!-- **** Contact Section **** -->
     <section id="contact">
       <div class="container">
