--- a/src/template.html
+++ b/src/template.html
@@ -176,6 +176,33 @@
             </div>
           </div>
           <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Binance bot</h3>
+                <div>
+                  <p class="mb-4">
+                    a hobby project using the binance api on python to make a futures bot
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/binance_bot">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://github.com/Alphainvicta/binance_bot" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/Binance.PNG.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
         </div>
       </div> 
     </section> 
