--- a/src/template.html
+++ b/src/template.html
@@ -196,7 +196,7 @@
               <div class="project-wrapper__image">
                 <a href="https://github.com/Alphainvicta/binance_bot" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/Binance.PNG.png" />
+                    <img class="img-fluid" src="./assets/Binance.png" />
                   </div>
                 </a>
               </div>
