added draw game

--- a/src/template.html
+++ b/src/template.html
@@ -203,6 +203,37 @@
             </div>
           </div>
           <!-- /END Project -->
+          
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Draw!</h3>
+                <div>
+                  <p class="mb-4">
+                    Vr game made on unity using low poly assets from the wild west
+                  </p>
+                </div>
+              </div>
+              <a target="_blank" class="cta-btn cta-btn--hero" href="https://floware.itch.io/draw">
+                See Live
+              </a>
+              <a target="_blank" class="cta-btn text-color-main" href="https://github.com/FloWareR/FlowareDraw">
+                Source Code
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-8 col-sm-12">
+            <div class="project-wrapper__image">
+              <a href="https://floware.itch.io/fish-flex" target="_blank">
+                <div data-tilt class="thumbnail rounded">
+                  <img class="img-fluid" src="./assets/draw.png" />
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+          <!-- /END Project -->
         </div>
       </div> 
     </section> 
