--- a/src/template.html
+++ b/src/template.html
@@ -88,11 +88,10 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Skyder website</h3>
+                <h3 class="project-wrapper__text-title">Website - Skyder</h3>
                 <div>
                   <p class="mb-4">
-                    Video drone house <br/>
-                    a fresh simple website where the company showcase their services and have a quote for a quick setup of what the customer expects from the service
+                    This is a react project created for a drone film studio
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://skyder-web.netlify.app/">
@@ -107,26 +106,24 @@
               <div class="project-wrapper__image">
                 <a href="https://skyder-web.netlify.app/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/Skyder.png" />
+                    <img class="img-fluid" src="./assets/skyder.png" />
                   </div>
                 </a>
               </div>
             </div>
           </div>
           <!-- /END Project -->
-
           <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Axolotl labs</h3>
+                <h3 class="project-wrapper__text-title">Website -Axolotelabs</h3>
                 <div>
                   <p class="mb-4">
-                    Software solutions <br/>
-                    My main website to promote our services
+                    This is a react project created for a software developer company
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://axolotlabs.netlify.app/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="axolotelabs.com">
                   See Live
                 </a>
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/axolote-labs">
@@ -136,25 +133,23 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://axolotlabs.netlify.app/" target="_blank">
+                <a href="axolotelabs.com" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/Axolote.png" />
+                    <img class="img-fluid" src="./assets/axolote.png" />
                   </div>
                 </a>
               </div>
             </div>
           </div>
           <!-- /END Project -->
-
           <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Fish Flex</h3>
+                <h3 class="project-wrapper__text-title">Video game - Fish Flex</h3>
                 <div>
                   <p class="mb-4">
-                    Top down 2D game <br/>
-                    My first videogame ever!
+                    This is a unity Top down 2D game project created
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://floware.itch.io/fish-flex">
@@ -176,17 +171,48 @@
             </div>
           </div>
           <!-- /END Project -->
-
           <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Binance bot</h3>
+                <h3 class="project-wrapper__text-title">Video game - Minecrack</h3>
                 <div>
                   <p class="mb-4">
-                    a hobby project using the binance api on python to make a futures bot
+                    This is a three js website project created to learn how to use three js
                   </p>
                 </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://unidad2examenglobal.netlify.app/">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/Unidad2_ExamenGlobal">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://unidad2examenglobal.netlify.app/" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/threejs.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Python - Binance bot</h3>
+                <div>
+                  <p class="mb-4">
+                    This is a python project to test api calls, websocket connections, nosql databases, multiprocessing and threading using kline data from binance
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://binance.com">
+                  See Live
+                </a>
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Alphainvicta/binance_bot">
                   Source Code
                 </a>
@@ -194,7 +220,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://github.com/Alphainvicta/binance_bot" target="_blank">
+                <a href="https://binance.com" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/Binance.png" />
                   </div>
@@ -203,36 +229,34 @@
             </div>
           </div>
           <!-- /END Project -->
-          
           <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Draw!</h3>
+                <h3 class="project-wrapper__text-title">Video game - Draw!</h3>
                 <div>
                   <p class="mb-4">
-                    Vr game made on unity using low poly assets from the wild west
+                    This is a unity Vr game project using low poly assets from the wild west
                   </p>
                 </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://floware.itch.io/draw">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/FloWareR/FlowareDraw">
+                  Source Code
+                </a>
               </div>
-              <a target="_blank" class="cta-btn cta-btn--hero" href="https://floware.itch.io/draw">
-                See Live
-              </a>
-              <a target="_blank" class="cta-btn text-color-main" href="https://github.com/FloWareR/FlowareDraw">
-                Source Code
-              </a>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://floware.itch.io/draw" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/draw.png" />
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
-          <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image">
-              <a href="https://floware.itch.io/fish-flex" target="_blank">
-                <div data-tilt class="thumbnail rounded">
-                  <img class="img-fluid" src="./assets/draw.png" />
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
           <!-- /END Project -->
         </div>
       </div> 
