added dave the wizard

--- a/src/template.html
+++ b/src/template.html
@@ -258,6 +258,35 @@
             </div>
           </div>
           <!-- /END Project -->
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Video game - Dave the wizard</h3>
+                <div>
+                  <p class="mb-4">
+                    This is a unity 3d game project that is a mix of tower defence and an action survival
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://floware.itch.io/dave-the-wizard">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/FloWareR/CowboyGame">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://floware.itch.io/dave-the-wizard" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/wizard.PNG" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
         </div>
       </div> 
     </section> 
